# ContextBuilder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  biome.json  clippy.toml  package.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: commands.rs  main.rs
apps/mcp-server/: package.json
apps/mcp-server/__tests__/: e2e.test.ts  server.test.ts
apps/mcp-server/src/: index.ts  resources.ts  tools.ts
apps/tui/: Cargo.toml
apps/tui/src/: app.rs  main.rs
apps/tui/src/screens/: browse_kbs.rs  create_kb.rs  mcp_server.rs  mod.rs  outputs.rs  update_kb.rs
apps/tui/src/widgets/: mod.rs
docs/: ImplementationPlan_01.md  ImplementationPlan_02.md  ImplementationPlan_03.md  ImplementationPlan_04.md  api-reference.md  architecture.md  configuration-reference.md  developer-guide.md  mcp-integration-guide.md  prd-document.md  project-structure.md  tech-stack.md  technical-specification.md  useful-links.md  user-guide.md
fixtures/: seed-test-db.ts
fixtures/html/: docusaurus.html  generic.html  gitbook.html  readthedocs.html  vitepress.html
fixtures/json/: manifest.fixture.json  toc.fixture.json
fixtures/llms/: invalid-not-markdown.txt  minimal-llms.txt  valid-llms-full.txt  valid-llms.txt
fixtures/markdown/: docusaurus.md  generic.md  gitbook.md  readthedocs.md  vitepress.md
fixtures/test-kb/artifacts/: SKILL.md  do_dont.md  llms-full.txt  llms.txt  rules.md  style.md
fixtures/test-kb/docs/: api-reference.md
fixtures/test-kb/docs/getting-started/: configuration.md  installation.md
fixtures/test-kb/indexes/: contextbuilder.db
