[workspace]
members = [
  "apps/cli",
  "apps/tui",
  "packages/rust/core",
  "packages/rust/shared",
  "packages/rust/discovery",
  "packages/rust/crawler",
  "packages/rust/markdown",
  "packages/rust/artifacts",
  "packages/rust/storage",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Shared across workspace — pin versions here, inherit in members
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
color-eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.23"
htmd = "0.1"
url = { version = "2", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v7", "serde"] }
regex = "1"
libsql = "0.9"
clap = { version = "4", features = ["derive", "env"] }
ratatui = "0.29"
crossterm = "0.28"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

# Internal crates
contextbuilder-shared = { path = "packages/rust/shared" }
contextbuilder-core = { path = "packages/rust/core" }
contextbuilder-discovery = { path = "packages/rust/discovery" }
contextbuilder-crawler = { path = "packages/rust/crawler" }
contextbuilder-markdown = { path = "packages/rust/markdown" }
contextbuilder-artifacts = { path = "packages/rust/artifacts" }
contextbuilder-storage = { path = "packages/rust/storage" }
