[package]
name = "contextbuilder-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "contextbuilder"
path = "src/main.rs"

[dependencies]
contextbuilder-shared = { workspace = true }
contextbuilder-core = { workspace = true }
contextbuilder-storage = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
indicatif = { workspace = true }
