[package]
name = "contextbuilder-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "contextbuilder-tui"
path = "src/main.rs"

[dependencies]
contextbuilder-shared = { workspace = true }
contextbuilder-core = { workspace = true }
contextbuilder-storage = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
